fixed open span

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</a>
 	</section>
 	<footer id="main_footer">
-		<span class="icoFont icon-logo_bq">
+		<span class="icoFont icon-logo_bq"></span>
 	</footer>
 </body>
 </html>
