--- a/index.html
+++ b/index.html
@@ -2,62 +2,74 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>bq on GitHub</title>
+	<title>bq OpenSource</title>
 	<link rel="stylesheet" href="styles/css/main.css">
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="scripts/main.js"></script>
 </head>
 <body>
 	<header id="main_header">
-		<h1><span class="icoFont icon-logo_bq"></span> on GitHub </h1>
+		<h1><span class="icoFont icon-logo_bq"></span> OpenSource</h1>
 	</header>
 	<section id="main_container">
 		<header>
 			<h1>Proyectos</h1>
 		</header>
-		<a class="git_element-link" href="https://github.com/bq/robopad">
-			<article id="robopad" class="git_element icoFont robotic_proyect">
-				<header>
-					<h1>Robopad</h1>
-				</header>
-			</article>
-		</a>
-		<a class="git_element-link" href="https://github.com/bq/droid2ino">
-			<article id="droid2ino" class="git_element icoFont robotic_proyect">
-				<header>
-					<h1>Droid2ino</h1>
-				</header>
-			</article>
-		</a>
-		<a class="git_element-link" href="https://github.com/bq/android-bootanimation-checker">
-			<article id="android-bootanimation-checker" class="git_element icoFont android_proyect">
-				<header>
-					<h1>Android Bootanimation Checker</h1>
-				</header>
-			</article>
-		</a>
-		<a class="git_element-link" href="https://github.com/bq/chat-kata">
-			<article id="chat-kata" class="git_element icoFont android_proyect">
-				<header>
-					<h1>Chat Kata</h1>
-				</header>
-			</article>
-		</a>
-		<a class="git_element-link" href="https://github.com/bq/chat-kata-extended">
-			<article id="chat-kata-extended" class="git_element icoFont android_proyect">
-				<header>
-					<h1>Chat Kata Extended</h1>
-				</header>
-			</article>
-		</a>
-		<a class="git_element-link" href="https://github.com/bq/bq.github.io">
-			<article id="this_proyect" class="git_element icoFont">
-				<header>
-					<h1>bq.github.io</h1>
-				</header>
-			</article>
-		</a>
+		<article class="loader"><img src="images/loader.gif" alt="loader"/></article>
+
+<!-- 		
+<a class="git_element-link" href="https://github.com/bq/robopad">
+	<article id="robopad" class="git_element icoFont robotic_proyect">
+		<header>
+			<h1>Robopad</h1>
+		</header>
+	</article>
+</a>
+<a class="git_element-link" href="https://github.com/bq/droid2ino">
+	<article id="droid2ino" class="git_element icoFont robotic_proyect">
+		<header>
+			<h1>Droid2ino</h1>
+		</header>
+	</article>
+</a>
+<a class="git_element-link" href="https://github.com/bq/android-bootanimation-checker">
+	<article id="android-bootanimation-checker" class="git_element icoFont android_proyect">
+		<header>
+			<h1>Android Bootanimation Checker</h1>
+		</header>
+	</article>
+</a>
+<a class="git_element-link" href="https://github.com/bq/chat-kata">
+	<article id="chat-kata" class="git_element icoFont android_proyect">
+		<header>
+			<h1>Chat Kata</h1>
+		</header>
+	</article>
+</a>
+<a class="git_element-link" href="https://github.com/bq/chat-kata-extended">
+	<article id="chat-kata-extended" class="git_element icoFont android_proyect">
+		<header>
+			<h1>Chat Kata Extended</h1>
+		</header>
+	</article>
+</a>
+<a class="git_element-link" href="https://github.com/bq/bq.github.io">
+	<article id="this_proyect" class="git_element icoFont">
+		<header>
+			<h1>bq.github.io</h1>
+		</header>
+	</article>
+</a> 
+-->
 	</section>
-	<footer id="main_footer">
+	<footer id="main_footer" class="clearfix">
 		<span class="icoFont icon-logo_bq"></span>
+		<ul class="social_links clearfix">
+			<li><a href=""><span class="icoFont icon-facebook"></span><span class="social_text">bqreaders</span></a></li>
+			<li><a href=""><span class="icoFont icon-twitter"></span><span class="social_text">@bqrreaders</span></a></li>
+			<li><a href=""><span class="icoFont icon-googleplus"></span><span class="social_text">+bqreaders</span></a></li>
+			<li><a href=""><span class="icoFont icon-mail"></span><span class="social_text">opensource@bq.com</span></a></li>
+		</ul>
 	</footer>
 </body>
 </html>
