--- a/index.html
+++ b/index.html
@@ -15,52 +15,18 @@
 		<header>
 			<h1>Proyectos</h1>
 		</header>
-		<article class="loader"><img src="images/loader.gif" alt="loader"/></article>
+		<div class="loader"><img src="images/loader.gif" alt="loader"/></div>
+	
+	<div id="repository_list"></div>
+	
+	<a class="git_element-link" href="https://github.com/bq">
+		<article id="this_proyect" class="git_element icoFont" data-thisRepo="true">
+			<header>
+				<h1>Bq OpenSource</h1>
+			</header>
+		</article>
+	</a> 
 
-<!-- 		
-<a class="git_element-link" href="https://github.com/bq/robopad">
-	<article id="robopad" class="git_element icoFont robotic_proyect">
-		<header>
-			<h1>Robopad</h1>
-		</header>
-	</article>
-</a>
-<a class="git_element-link" href="https://github.com/bq/droid2ino">
-	<article id="droid2ino" class="git_element icoFont robotic_proyect">
-		<header>
-			<h1>Droid2ino</h1>
-		</header>
-	</article>
-</a>
-<a class="git_element-link" href="https://github.com/bq/android-bootanimation-checker">
-	<article id="android-bootanimation-checker" class="git_element icoFont android_proyect">
-		<header>
-			<h1>Android Bootanimation Checker</h1>
-		</header>
-	</article>
-</a>
-<a class="git_element-link" href="https://github.com/bq/chat-kata">
-	<article id="chat-kata" class="git_element icoFont android_proyect">
-		<header>
-			<h1>Chat Kata</h1>
-		</header>
-	</article>
-</a>
-<a class="git_element-link" href="https://github.com/bq/chat-kata-extended">
-	<article id="chat-kata-extended" class="git_element icoFont android_proyect">
-		<header>
-			<h1>Chat Kata Extended</h1>
-		</header>
-	</article>
-</a>
-<a class="git_element-link" href="https://github.com/bq/bq.github.io">
-	<article id="this_proyect" class="git_element icoFont">
-		<header>
-			<h1>bq.github.io</h1>
-		</header>
-	</article>
-</a> 
--->
 	</section>
 	<footer id="main_footer" class="clearfix">
 		<span class="icoFont icon-logo_bq"></span>
