bq en minúscula

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<a class="git_element-link" href="https://github.com/bq">
 		<article id="this_proyect" class="git_element icoFont" data-thisRepo="true">
 			<header>
-				<h1>Bq OpenSource</h1>
+				<h1>bq <i>OpenSource</i></h1>
 			</header>
 		</article>
 	</a> 
