links del footer arreglados

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 	<footer id="main_footer" class="clearfix">
 		<span class="icoFont icon-logo_bq"></span>
 		<ul class="social_links clearfix">
-			<li><a href=""><span class="icoFont icon-facebook"></span><span class="social_text">bqreaders</span></a></li>
-			<li><a href=""><span class="icoFont icon-twitter"></span><span class="social_text">@bqrreaders</span></a></li>
-			<li><a href=""><span class="icoFont icon-googleplus"></span><span class="social_text">+bqreaders</span></a></li>
-			<li><a href=""><span class="icoFont icon-mail"></span><span class="social_text">opensource@bq.com</span></a></li>
+			<li><a href="http://www.facebook.com/bqreaders?ref=ts"><span class="icoFont icon-facebook"></span><span class="social_text">bqreaders</span></a></li>
+			<li><a href="http://twitter.com/#!/bqreaders"><span class="icoFont icon-twitter"></span><span class="social_text">@bqrreaders</span></a></li>
+			<li><a href="https://plus.google.com/101489582165235848044"><span class="icoFont icon-googleplus"></span><span class="social_text">+bqreaders</span></a></li>
+			<li><a href="mailto:opensource@bq.com"><span class="icoFont icon-mail"></span><span class="social_text">opensource@bq.com</span></a></li>
 		</ul>
 	</footer>
 </body>
