--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 	<div id="repository_list"></div>
 	
 	<a class="git_element-link" href="https://github.com/bq">
-		<article id="this_proyect" class="git_element icoFont" data-thisRepo="true">
+		<article id="view_on_github" class="icoFont">
 			<header>
-				<h1>bq <i>OpenSource</i></h1>
+				<h1>view on gitHub</h1>
 			</header>
 		</article>
 	</a> 
 
 	</section>
 	<footer id="main_footer" class="clearfix">
-		<span class="icoFont icon-logo_bq"></span>
 		<ul class="social_links clearfix">
+			<li><a href="http://www.mibqyyo.com/comunidad/"><span class="icoFont icon-logo_bq"></span><span class="social_text">Mi bq y yo</span></a></li>
 			<li><a href="http://www.facebook.com/bqreaders?ref=ts"><span class="icoFont icon-facebook"></span><span class="social_text">bqreaders</span></a></li>
 			<li><a href="http://twitter.com/#!/bqreaders"><span class="icoFont icon-twitter"></span><span class="social_text">@bqrreaders</span></a></li>
 			<li><a href="https://plus.google.com/101489582165235848044"><span class="icoFont icon-googleplus"></span><span class="social_text">+bqreaders</span></a></li>
