--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>bq OpenSource</title>
 	<link rel="stylesheet" href="styles/css/main.css">
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script src="scripts/main.js"></script>
+	<script src="scripts/min/main.min.js"></script>
 </head>
 <body>
 	<header id="main_header">
