chore(bq) brand renewed

--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
 
   <div class="wrapper">
 
-    <h1 class="hide">bq Open Source</h1>
+    <h1 class="invisible">bq Open Source</h1>
 
     <div class="jumbo">
       <h2 class="jumbo__title">We believe in Open Source</h2>
-
       <form class="searcher">
-        <input class="searcher__input" type="text" placeholder="Search a repo"/>
+        <input class="searcher__input" type="search" placeholder="Search an open source project"/>
       </form>
     </div>
 
@@ -82,7 +81,7 @@
         <a href="#" class="filter__menu__link filter" data-filter="[data-language=Ruby]">Ruby</a>
       </li>
       <li class="filter__menu__item">
-        <a href="#" class="filter__menu__link filter" data-filter="[data-language=other]">Others</a>
+        <a href="#" class="filter__menu__link filter custom" data-filter="none">Others</a>
       </li>
       <li class="filter__menu__item">
         <a href="#" class="filter__menu__link filter active" data-filter="all">View all</a>
