--- a/index.html
+++ b/index.html
@@ -193,8 +193,13 @@
     <!-- MixItUp -->
     <script src="/bower_components/mixitup/build/jquery.mixitup.min.js"></script>
 
+    <!-- Github  API -->
+    <script src="https://npmcdn.com/github-api/dist/GitHub.bundle.min.js"></script>
+
     <!-- Components demo -->
     <script src="/assets/js/main.js"></script>
+
+
 
   </body>
 
